--- a/p6/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p6/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -184,7 +184,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="dFQ-Cj-aYb"/>
                     <connections>
-                        <outlet property="descTextView" destination="8Nq-b0-WNM" id="YI4-eG-hvF"/>
+                        <outlet property="descTextView" destination="JXH-hl-ObP" id="v3a-ja-rwu"/>
                         <outlet property="idTextField" destination="Atw-g6-6cF" id="YXy-SG-kS7"/>
                         <outlet property="imageTextField" destination="LV4-cs-RD3" id="mv7-13-sgy"/>
                         <outlet property="nameTextField" destination="Hem-7j-7Wq" id="eDC-jF-h4o"/>
