--- a/p6/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p6/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -400,7 +400,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="1NT-ME-lUW"/>
+        <segue reference="2eZ-o3-krw"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="film.fill" catalog="system" width="128" height="93"/>
